fixed z-index on picture

--- a/glaciermark/src/app/contact/contact.component.less
+++ b/glaciermark/src/app/contact/contact.component.less
@@ -9,6 +9,7 @@
   grid-column-start: 1;
   height: 100%;
   min-width: 100%;
+  z-index: -1;
 
   img {
     background-color: rgb(65, 68, 82);
